cmake_minimum_required(VERSION 3.14)
project(cpp-samples)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-unused-parameter -Wno-unused-variable -Wno-unused-but-set-variable")

include_directories(external/include)

# [REQUIRE] cd build; conan install ..
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)

# Global variables for conan libs.
################################
# include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
# conan_basic_setup()

# add_executable(cpp main.cpp)
# target_link_libraries(cpp ${CONAN_LIBS})
################################

add_subdirectory(cppitertools)
add_subdirectory(backward-cpp)
add_subdirectory(pprint)
add_subdirectory(sanitize)
add_subdirectory(pystring)
add_subdirectory(taywee-args)
add_subdirectory(functionalplus)
add_subdirectory(spy)
add_subdirectory(fmt)
add_subdirectory(spdlog)
add_subdirectory(doctest)
add_subdirectory(benchmark)
add_subdirectory(copy-elision)
add_subdirectory(thread)
add_subdirectory(tscns)
add_subdirectory(orderedArray-orderedDeque-map-benchmark)
add_subdirectory(decltype)
add_subdirectory(log)
add_subdirectory(mio)
add_subdirectory(obfuscator)
add_subdirectory(unordered_set-vector-benchmark)
add_subdirectory(unordered_map-vector_pair-benchmark)
add_subdirectory(concurrentqueue)
add_subdirectory(nano-bench)
add_subdirectory(async)
add_subdirectory(tmp)
add_subdirectory(rehash)
add_subdirectory(bench-exception-vs-return)
add_subdirectory(json)
add_subdirectory(arrow)
add_subdirectory(time)
add_subdirectory(regex)
add_subdirectory(print-macro)
add_subdirectory(dlfcn)
add_subdirectory(conv)
